Updated usage and fixed local directory error

--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
-  "name": "@madissia/json-reader",
-  "version": "1.0.0",
-  "description": "A simple JSON reader and writer",
-  "main": "index.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/madissia/JSONReader.git"
-  },
-  "keywords": [
-    "json",
-    "nodejs",
-    "node",
-    "npm",
-    "reader",
-    "writer"
-  ],
-  "author": "madissia",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/madissia/JSONReader/issues"
-  },
-  "homepage": "https://github.com/madissia/JSONReader#readme"
+	"license": "MIT",
+	"version": "1.0.0",
+	"author": "madissia",
+	"name": "@madissia/json-reader",
+	"description": "A simple JSON reader and writer",
+
+	"keywords": [
+		"json",
+		"nodejs",
+		"node",
+		"npm",
+		"reader",
+		"writer",
+		"madissia"
+	],
+
+	"main": "index.js",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/madissia/JSONReader.git"
+	},
+	"homepage": "https://github.com/madissia/JSONReader#readme",
+	"bugs": { "url": "https://github.com/madissia/JSONReader/issues" }
 }
